[desktop] deprecation fix on LifecycleManagerImpl